  * Update config.sub and config.guess from autotools-dev
      (Closes: #408076, #414181)
  * Use ${binary:Version} instead of ${Source-Version}.
  * Documentation:
     * Remove some SGML documentation now missing from upstream
     * Add Sicstus and SWI-Prolog v4.8 -related XPCE documentation
  * Change ".menu" sections from "Apps/Programming" -> "Development"

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 02 Dec 2007 23:26:00 +0000

swi-prolog (5.6.14-1) unstable; urgency=low

  * The "OMG!" release
  * New Upstream Release (closes: #308325)
  * New Maintainer (closes: #296871)
  * Now Build from source (closes: #324053)
  * libreadline5-dev added as a buil-dependency (closes: #326293)
  * xlibs-dev dependency removed (closes: #347073)
  * .pwd file removed (closes:  #285894)

 -- Gerardo Curiel <gcuriel@debianvenezuela.org>  Sat, 10 Jun 2006 00:22:25 -0400

swi-prolog (5.2.13-1) unstable; urgency=low

  * New upstream (closes: #257254)
  * Fixed executable naming in man page (closes: #223815)
  * Added http and semweb packages

 -- Michael Piefel <piefel@debian.org>  Mon, 12 Jul 2004 14:55:07 +0200

swi-prolog (5.2.7-1) unstable; urgency=low

  * New upstream - this supposedly closes: #206428 (a build failure)
  * debian/rules clean: remove file before directory for greater effect

 -- Michael Piefel <piefel@debian.org>  Tue, 09 Sep 2003 15:36:52 +0200

swi-prolog (5.2.6-1) unstable; urgency=low

  * New upstream.
  * Install clib's files into a directory instead of on top of each other
    (closes: #206520)
  * Delay restoration of upstream config.{sub,guess} until after make step
    since configure is called during the build (closes: #206443)

 -- Michael Piefel <piefel@debian.org>  Thu, 21 Aug 2003 14:32:59 +0200

swi-prolog (5.2.5-1) unstable; urgency=low

  * New upstream version
  * Merged the source packages for swi-prolog and swi-prolog-packages together
    again. The build process upstream uses finally doesn't